Sun Jan 22 20:23:56 GMT 2006 (njh)
----------------------------------
  * libclamav/mbox.c	NEW_WORLD: speed up when not looking for Phish

Sat Jan 21 18:35:34 GMT 2006 (njh)
----------------------------------
  * libclamav:		Scan uuencoded files. Helps to catch doubly encoded
				emails such as Worm.VB-8

Tue Jan 17 17:31:06 GMT 2006 (njh)
----------------------------------
  * libclamav/uuencode.[ch]:	Created, but not yet called

Sun Jan 15 16:43:36 CET 2006 (tk)
---------------------------------
  * libclamav: bruteforce sfx detection

Fri Jan 14 14:51:01 CET 2006 (acab)
---------------------------------
  * libclamav: added yC support
  		thanks a lot to Ivan Zlatev <pumqara*gmail.com>
  
Fri Jan 13 14:53:45 CET 2006 (tk)
---------------------------------
  * libclamav/vba_extract.c: fix possible memory leak, reported by  Cesar
			     Lopez <clc1972*gmail.com>

Tue Jan 10 01:53:20 CET 2006 (acab)
-----------------------------------
  * libclamav: bugfix/hardening of unpacking code

Sat Jan  7 04:27:05 CET 2006 (tk)
---------------------------------
  * libclamav/sis.c: extract and scan SIS packages

Mon Jan  2 18:02:20 GMT 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Bug fix to the patch of 28/12 for versions of curl
				that don't support curl_easy_strerror()

Mon Jan  2 17:38:35 GMT 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	NEW_WORLD code (not enabled by default) now finds all
				malware in my database and is now ready for
				testing

Wed Dec 28 13:49:46 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Added patches by Gianluigi Tiesi <sherpya*netfarm.it>
				Improve CURL support on Windows
				Improve CURL error message for systems without
					CURL_ERRORBUFFER

Thu Dec 15 20:51:27 CET 2005 (tk)
---------------------------------
  * libclamav/sis.c: use mmap() when available

Thu Dec 15 02:52:01 CET 2005 (tk)
---------------------------------
  * libclamav/sis.[ch]: new files