@@ -1,3 +1,7 @@
+Mon Jan 23 12:12:07 CET 2006 (acab)
+-----------------------------------
+  * libclamav/yc.c	Fix warnings
+
 Sun Jan 22 20:23:56 GMT 2006 (njh)
 ----------------------------------
   * libclamav/mbox.c	NEW_WORLD: speed up when not looking for Phish
